# sge-native-providers

./: .gitignore  .gitmodules  LICENSE  README.md  build.sbt
.github/workflows/: ci.yml  release.yml
native-components/: Cargo.toml
native-components/core/: Cargo.toml  build.rs
native-components/core/src/: buffer_ops.rs  etc1.rs  lib.rs
native-components/freetype/: Cargo.toml
native-components/freetype/src/: lib.rs
native-components/physics/: Cargo.toml
native-components/physics/src/: lib.rs
native-components/physics3d/: Cargo.toml
native-components/physics3d/src/: lib.rs
project/: plugins.sbt
providers/pnm-provider-sge-android/src/main/resources/: pnm-provider.json
providers/pnm-provider-sge-angle/src/main/resources/: pnm-provider.json
providers/pnm-provider-sge-desktop/src/main/resources/: pnm-provider.json
providers/pnm-provider-sge-freetype-android/src/main/resources/: pnm-provider.json
providers/pnm-provider-sge-freetype-desktop/src/main/resources/: pnm-provider.json
providers/pnm-provider-sge-physics-android/src/main/resources/: pnm-provider.json
providers/pnm-provider-sge-physics-desktop/src/main/resources/: pnm-provider.json
providers/scala-native-angle/src/main/resources/: native-bundle.json
providers/scala-native-sge-freetype/src/main/resources/: native-bundle.json
providers/scala-native-sge-ops/src/main/resources/: native-bundle.json
providers/scala-native-sge-physics/src/main/resources/: native-bundle.json
scripts/: cross-all.sh  cross-android.sh  download-angle.sh
(+4 files in other folders)
